--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,16 @@
   author={Rajkumar, U and Javadzadeh, S and Bafna, M and Wu, D and Yu, R and Bafna, V and Shang, J},
   year={2022},
   journal={ACM-BCB},
-  publisher={},
   selected={true}
 }
 
+@misc{MetaDetect,
+  abbr={MetaDetect},
+  bibtex_show={true},
+  title={Computer-implemented methods for quantitation of features of interest in
+whole slide imaging. Provisional patent.},
+  author={Nguyen, N and Mora-Blanco, L and Turner, K and  Christiansen, J and Bafna, M},
+  year={2021},
+  notes={Provisional patent},
+  selected={false}
+}
