changed computer background (lightmode)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,17 @@
   author={Rajkumar, U and Javadzadeh, S and Bafna, M and Wu, D and Yu, R and Bafna, V and Shang, J},
   year={2022},
   journal={ACM-BCB},
-  selected={true}
+  selected={true},
+  abstract={We consider the problem of identifying viral reads in human host genome data. When the viral
+family is highly diverged, sequence based methods have low sensitivity, and domain specific training
+is needed to recognize the viral reads. We show first that Deep convolutional neural networks, that
+model the problem as one of supervised classification, also have reduced sensitivity in this ‘open-set’
+testing scenario. Next, we present DeepViFi, which uses deep learning on a transformer architecture
+to learn high-dimensional representations of viral reads from short-read whole genome sequence data.
+At 90% precision, DeepViFi achieved 90% recall compared to 15% for other deep learning methods.
+Our results suggest that DeepViFi provides a framework for rapidly learning of representations from
+families without specific domain knowledge, a fast test for quickly and accurately identifying the
+target sequences in a larger data-set.}
 }
 
 @misc{MetaDetect,
@@ -21,5 +31,6 @@ whole slide imaging. Provisional patent.},
   author={Nguyen, N and Mora-Blanco, L and Turner, K and  Christiansen, J and Bafna, M},
   year={2021},
   notes={Provisional patent},
-  selected={false}
+  selected={false},
+  abs={}
 }
