--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,9 +31,24 @@ pdf={https://dl.acm.org/doi/pdf/10.1145/3535508.3545551}
   bibtex_show={true},
   title={Computer-implemented methods for quantitation of features of interest in
 whole slide imaging. Provisional patent.},
-  author={Nguyen, N and Mora-Blanco, L and Turner, K and  Christiansen, J and Bafna, M},
+  author={Nguyen, N and Mora-Blanco, L and Turner, K and Weise, Julie and  Christiansen, J and Bafna, M},
   year={2021},
   notes={Provisional patent},
   selected={false},
   abs={}
+}
+
+@inproceedings{ST-CCI,
+abbr={ST-CCI},
+author = {Bafna, Mihir and Zhang, Xiuwei},
+title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcriptomics and Deep Learning},
+booktitle   = {St. Jude National Symposium for Undergraduate Research},
+year= {2022},
+publisher = {St. Jude (NSUR)},
+url       = {official link to the online version},
+selected={true},
+pdf={https://drive.google.com/file/d/1nEwQOVA5OmmaOwH0CeHw16U0P2CclKKD/view?usp=sharing},
+abstract={The (mal-)functioning of human tissues can be attributed to genes that are active (expressed) or repressed relative to expectations. New genomic technologies allow measurements not only at single cell (sc) resolution, but also retain information on the spatial location of the cell. These Spatial Transcriptomics (ST) technologies could revolutionize human health. For example, they offer an unprecedented look at the tumor microenvironment, revealing the infiltrating immune cells and their interactions with their cancerous counterparts. Many computational methods now analyze the complex, high dimensional ST data for inferring these cell-cell interactions (CCIs). However, the ST community lacks a centralized ground truth to holistically evaluate these tools. Here, (a) we systematically benchmark existing methods and (b) suggest a deep learning method for refining ST-CCI prediction. 
+
+We evaluated 7 methods, including CellPhoneDB and DeepLinc, on 10 simulated datasets at 5 noise levels as well as 2 real datasets generated using SeqFISH and MerFISH. CellPhoneDB achieved an average precision/recall of 0.79/0.75 respectively, with the recall reducing to 0.65 for certain datasets. DeepLinc only achieved 0.68 prediction accuracy on SeqFISH data after being trained with labeled data. Additionally, the ROC curves were surprisingly linear, suggesting that increasing true positive rate comes only with increasing false positive rate. All other methods resulted in similar performance and the same pitfalls: failing to properly utilize either the spatial information or downstream gene regulatory interactions (GRN), thus increasing the false positive interactions. Our work provides, for the first time, a curated data resource for future tool comparisons and a systematic analysis of the shortcomings of existing methods. Lastly, to address these drawbacks, we deployed a preliminary version of a subgraph neural network, where we represent each cell by a subgraph of its underlying GRN, obtaining lower-dimensional representations of each cell with GRN information embedded. These embeddings incorporate gene expression, spatial information, and GRN activity thereby allowing us to refine ST-CCI inference. This has myriad applications like revealing interactions between co-located immune cells and tumor cells, addressing the central biological problem of why certain tumors are “immunologically hot” and respond better to immuno-oncotherapy.}
 }
