--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,10 +4,38 @@
 @string{aps = {American Physical Society,}}
 
 
+@inproceedings{Clarify,
+abbr={Clarify},
+bibtex_show={true},
+author = {Mihir, Bafna and Hechen, Li and Xiuwei, Zhang},
+title= {CLARIFY: Cell-cell interaction and gene regulatory network refinement from spatially resolved transcriptomics},
+booktitle   = {Proceedings of the 31st Conference on Intelligent Systems for Molecular Biology (to appear).},
+year= {2023},
+publisher = {Oxford University Press},
+selected={true},
+abstract={Motivation: Gene regulatory networks (GRNs) in a cell provide the tight feedback needed to synchronize cell actions. However, genes in a cell also take input from, and provide signals to other neighboring cells. These cell-cell interactions (CCIs) and the GRNs deeply influence each other. Many computational methods have been developed for GRN inference in cells. More recently, methods were proposed to infer CCIs using single cell gene expression data with or without cell spatial location information. However, in reality, the two processes do not exist in isolation and are subject to spatial constraints. Despite this rationale, no methods currently exist to infer GRNs and CCIs using the same model. Results: We propose CLARIFY, a tool that takes GRNs as input, uses them and spatially resolved gene expression data to infer CCIs, while simultaneously outputs refined cell-specific GRNs. CLARIFY uses a novel multi-level graph autoencoder, which mimics cellular networks at a higher level and cell-specific GRNs at a deeper level. We applied CLARIFY to two real spatial transcriptomic datasets, one using seqFISH and the other using MERFISH, and also tested on simulated datasets from scMultiSim. We compared the quality of predicted GRNs and CCIs with state-of-the-art baseline methods that inferred either only GRNs or only CCIs. The results show that CLARIFY consistently outperforms the baseline in terms of commonly used evaluation metrics. Our results point to the importance of co-inference of CCIs and GRNs and to the use of layered graph neural networks as an inference tool for biological networks. We evaluated 7 methods, including CellPhoneDB and DeepLinc, on 10 simulated datasets at 5 noise levels as well as 2 real datasets generated using SeqFISH and MerFISH. CellPhoneDB achieved an average precision/recall of 0.79/0.75 respectively, with the recall reducing to 0.65 for certain datasets. DeepLinc only achieved 0.68 prediction accuracy on SeqFISH data after being trained with labeled data. Additionally, the ROC curves were surprisingly linear, suggesting that increasing true positive rate comes only with increasing false positive rate. All other methods resulted in similar performance and the same pitfalls: failing to properly utilize either the spatial information or downstream gene regulatory interactions (GRN), thus increasing the false positive interactions. Our work provides, for the first time, a curated data resource for future tool comparisons and a systematic analysis of the shortcomings of existing methods. Lastly, to address these drawbacks, we deployed a preliminary version of a subgraph neural network, where we represent each cell by a subgraph of its underlying GRN, obtaining lower-dimensional representations of each cell with GRN information embedded. These embeddings incorporate gene expression, spatial information, and GRN activity thereby allowing us to refine ST-CCI inference. This has myriad applications like revealing interactions between co-located immune cells and tumor cells, addressing the central biological problem of why certain tumors are “immunologically hot” and respond better to immuno-oncotherapy.}
+}
+
+@inproceedings{ST-CCI,
+abbr={ST-CCI},
+author = {Mihir, Bafna and Xiuwei, Zhang},
+title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcriptomics and Deep Learning},
+booktitle   = {St. Jude National Symposium for Undergraduate Research},
+year= {2022},
+publisher = {St. Jude (NSUR)},
+url       = {official link to the online version},
+selected={false},
+poster={https://drive.google.com/file/d/1nEwQOVA5OmmaOwH0CeHw16U0P2CclKKD/view?usp=sharing},
+abstract={The (mal-)functioning of human tissues can be attributed to genes that are active (expressed) or repressed relative to expectations. New genomic technologies allow measurements not only at single cell (sc) resolution, but also retain information on the spatial location of the cell. These Spatial Transcriptomics (ST) technologies could revolutionize human health. For example, they offer an unprecedented look at the tumor microenvironment, revealing the infiltrating immune cells and their interactions with their cancerous counterparts. Many computational methods now analyze the complex, high dimensional ST data for inferring these cell-cell interactions (CCIs). However, the ST community lacks a centralized ground truth to holistically evaluate these tools. Here, (a) we systematically benchmark existing methods and (b) suggest a deep learning method for refining ST-CCI prediction. 
+
+We evaluated 7 methods, including CellPhoneDB and DeepLinc, on 10 simulated datasets at 5 noise levels as well as 2 real datasets generated using SeqFISH and MerFISH. CellPhoneDB achieved an average precision/recall of 0.79/0.75 respectively, with the recall reducing to 0.65 for certain datasets. DeepLinc only achieved 0.68 prediction accuracy on SeqFISH data after being trained with labeled data. Additionally, the ROC curves were surprisingly linear, suggesting that increasing true positive rate comes only with increasing false positive rate. All other methods resulted in similar performance and the same pitfalls: failing to properly utilize either the spatial information or downstream gene regulatory interactions (GRN), thus increasing the false positive interactions. Our work provides, for the first time, a curated data resource for future tool comparisons and a systematic analysis of the shortcomings of existing methods. Lastly, to address these drawbacks, we deployed a preliminary version of a subgraph neural network, where we represent each cell by a subgraph of its underlying GRN, obtaining lower-dimensional representations of each cell with GRN information embedded. These embeddings incorporate gene expression, spatial information, and GRN activity thereby allowing us to refine ST-CCI inference. This has myriad applications like revealing interactions between co-located immune cells and tumor cells, addressing the central biological problem of why certain tumors are “immunologically hot” and respond better to immuno-oncotherapy.}
+}
+
+
 @inproceedings{DeepVifi,
 abbr={DeepVifi},
 bibtex_show={true},
-author = {Rajkumar, Utkrisht and Javadzadeh, Sara and Bafna, Mihir and Wu, Dongxia and Yu, Rose and Shang, Jingbo and Bafna, Vineet},
+author = {Utkrisht, Rajkumar and Sara, Javadzadeh and Mihir, Bafna and Dongxia, Wu and Rose, Yu and Jingbo, Shang and Vineet, Bafna},
 title = {DeepViFi: Detecting Oncoviral Infections in Cancer Genomes Using Transformers},
 year = {2022},
 isbn = {9781450393867},
@@ -31,24 +59,10 @@ pdf={https://dl.acm.org/doi/pdf/10.1145/3535508.3545551}
   bibtex_show={true},
   title={Computer-implemented methods for quantitation of features of interest in
 whole slide imaging. Provisional patent.},
-  author={Nguyen, N and Mora-Blanco, L and Turner, K and Weise, Julie and  Christiansen, J and Bafna, M},
+  author={Nam, Nguyen and Lorena, Mora-Blanco and Kristen, Turner and Julie, Weise and  Jason, Christiansen and Mihir, Bafna},
   year={2021},
   notes={Provisional patent},
-  selected={false},
+  selected={true},
   abs={}
 }
 
-@inproceedings{ST-CCI,
-abbr={ST-CCI},
-author = {Bafna, Mihir and Zhang, Xiuwei},
-title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcriptomics and Deep Learning},
-booktitle   = {St. Jude National Symposium for Undergraduate Research},
-year= {2022},
-publisher = {St. Jude (NSUR)},
-url       = {official link to the online version},
-selected={true},
-pdf={https://drive.google.com/file/d/1nEwQOVA5OmmaOwH0CeHw16U0P2CclKKD/view?usp=sharing},
-abstract={The (mal-)functioning of human tissues can be attributed to genes that are active (expressed) or repressed relative to expectations. New genomic technologies allow measurements not only at single cell (sc) resolution, but also retain information on the spatial location of the cell. These Spatial Transcriptomics (ST) technologies could revolutionize human health. For example, they offer an unprecedented look at the tumor microenvironment, revealing the infiltrating immune cells and their interactions with their cancerous counterparts. Many computational methods now analyze the complex, high dimensional ST data for inferring these cell-cell interactions (CCIs). However, the ST community lacks a centralized ground truth to holistically evaluate these tools. Here, (a) we systematically benchmark existing methods and (b) suggest a deep learning method for refining ST-CCI prediction. 
-
-We evaluated 7 methods, including CellPhoneDB and DeepLinc, on 10 simulated datasets at 5 noise levels as well as 2 real datasets generated using SeqFISH and MerFISH. CellPhoneDB achieved an average precision/recall of 0.79/0.75 respectively, with the recall reducing to 0.65 for certain datasets. DeepLinc only achieved 0.68 prediction accuracy on SeqFISH data after being trained with labeled data. Additionally, the ROC curves were surprisingly linear, suggesting that increasing true positive rate comes only with increasing false positive rate. All other methods resulted in similar performance and the same pitfalls: failing to properly utilize either the spatial information or downstream gene regulatory interactions (GRN), thus increasing the false positive interactions. Our work provides, for the first time, a curated data resource for future tool comparisons and a systematic analysis of the shortcomings of existing methods. Lastly, to address these drawbacks, we deployed a preliminary version of a subgraph neural network, where we represent each cell by a subgraph of its underlying GRN, obtaining lower-dimensional representations of each cell with GRN information embedded. These embeddings incorporate gene expression, spatial information, and GRN activity thereby allowing us to refine ST-CCI inference. This has myriad applications like revealing interactions between co-located immune cells and tumor cells, addressing the central biological problem of why certain tumors are “immunologically hot” and respond better to immuno-oncotherapy.}
-}
