fixed about section

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
 abbr={Clarify},
 author = {Mihir, Bafna and Hechen, Li and Xiuwei, Zhang},
 title= {CLARIFY: Cell-cell interaction and gene regulatory network refinement from spatially resolved transcriptomics},
-booktitle   = {Proceedings of the 31st Conference on Intelligent Systems for Molecular Biology (to appear).},
+booktitle   = {the 31st Conference on Intelligent Systems for Molecular Biology (ISMB; in press at Bioinformatics)},
 year= {2023},
 website={https://www.iscb.org/ismbeccb2023-programme/proceedings},
 publisher = {Oxford University Press},
@@ -44,7 +44,7 @@ address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3535508.3545551},
 doi = {10.1145/3535508.3545551},
 abstract = {We consider the problem of identifying viral reads in human host genome data. We pose the problem as open-set classification as reads can originate from unknown sources such as bacterial and fungal genomes. Sequence-matching methods have low sensitivity in recognizing viral reads when the viral family is highly diverged. Hidden Markov models have higher sensitivity but require domain-specific training and are difficult to repurpose for identifying different viral families. Supervised learning methods can be trained with little domain-specific knowledge but have reduced sensitivity in open-set scenarios. We present DeepViFi, a transformer-based pipeline, to detect viral reads in short-read whole genome sequence data. At 90% precision, DeepViFi achieves 90% recall compared to 15% for other deep learning methods. DeepViFi provides a semi-supervised framework to learn representations of viral families without domain-specific knowledge, and rapidly and accurately identify target sequences in open-set settings.},
-booktitle = {Proceedings of the 13th ACM International Conference on Bioinformatics, Computational Biology and Health Informatics},
+booktitle = {Proceedings of the 13th ACM International Conference on Bioinformatics, Computational Biology and Health Informatics (ACM-BCB)},
 articleno = {2},
 numpages = {8},
 keywords = {neural networks, viral detection, natural language processing, open-set classification},
