added code links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@ booktitle   = {31st Conference on Intelligent Systems for Molecular Biology},
 shorttitle={ISMB; in press at Bioinformatics},
 year= {2023},
 website={https://www.iscb.org/ismbeccb2023-programme/proceedings},
+code={https://github.com/MihirBafna/clarify#readme},
 publisher = {Oxford University Press},
 selected={true},
 appear={true},
@@ -55,7 +56,8 @@ keywords = {neural networks, viral detection, natural language processing, open-
 location = {Northbrook, Illinois},
 series = {BCB '22},
 selected= {true},
-pdf={https://dl.acm.org/doi/pdf/10.1145/3535508.3545551}
+pdf={https://dl.acm.org/doi/pdf/10.1145/3535508.3545551},
+code={https://github.com/UCRajkumar/DeepViFi}
 }
 
 @patent{MetaDetect,
