--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,8 +10,10 @@ author = {Mihir, Bafna and Hechen, Li and Xiuwei, Zhang},
 title= {CLARIFY: Cell-cell interaction and gene regulatory network refinement from spatially resolved transcriptomics},
 booktitle   = {31st Conference on Intelligent Systems for Molecular Biology},
 shorttitle={ISMB; in press at Bioinformatics},
+short={ISMB},
 year= {2023},
 website={https://www.iscb.org/ismbeccb2023-programme/proceedings},
+press={https://www.cc.gatech.edu/news/award-winning-computer-models-propel-research-cellular-differentiation},
 code={https://github.com/MihirBafna/clarify#readme},
 publisher = {Oxford University Press},
 selected={true},
@@ -25,6 +27,7 @@ author = {Mihir, Bafna and Xiuwei, Zhang},
 title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcriptomics and Deep Learning},
 booktitle   = {St. Jude National Symposium for Undergraduate Research},
 shorttitle={NSUR},
+short={NSUR},
 year= {2022},
 publisher = {St. Jude (NSUR)},
 url       = {official link to the online version},
@@ -50,6 +53,7 @@ doi = {10.1145/3535508.3545551},
 abstract = {We consider the problem of identifying viral reads in human host genome data. We pose the problem as open-set classification as reads can originate from unknown sources such as bacterial and fungal genomes. Sequence-matching methods have low sensitivity in recognizing viral reads when the viral family is highly diverged. Hidden Markov models have higher sensitivity but require domain-specific training and are difficult to repurpose for identifying different viral families. Supervised learning methods can be trained with little domain-specific knowledge but have reduced sensitivity in open-set scenarios. We present DeepViFi, a transformer-based pipeline, to detect viral reads in short-read whole genome sequence data. At 90% precision, DeepViFi achieves 90% recall compared to 15% for other deep learning methods. DeepViFi provides a semi-supervised framework to learn representations of viral families without domain-specific knowledge, and rapidly and accurately identify target sequences in open-set settings.},
 booktitle = {Proceedings of the 13th ACM International Conference on Bioinformatics, Computational Biology and Health Informatics},
 shorttitle= {ACM-BCB},
+short={ACM-BCB},
 articleno = {2},
 numpages = {8},
 keywords = {neural networks, viral detection, natural language processing, open-set classification},
