--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,7 @@ title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcript
 booktitle   = {St. Jude National Symposium for Undergraduate Research},
 shorttitle={NSUR},
 short={NSUR},
+Month={Oct},
 year= {2022},
 publisher = {St. Jude (NSUR)},
 url       = {official link to the online version},
