added diffrnafold workshop paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,20 @@
 ---
 
 @string{aps = {American Physical Society,}}
-
+@inproceedings{DiffRNAFold,
+abbr={DiffRNAFold},
+author = {Mihir, Bafna and Vikranth, Keerthipati and Subhash, Kanaparthi and Ruochi, Zhang},
+title= {DiffRNAFold: Generating RNA Tertiary Structures with Latent Space Diffusion},
+booktitle   = {NeurIPS Workshop on Machine Learning for Structural Biology},
+shorttitle={NeurIPS MLSB},
+short={NeurIPS MLSB},
+Month={Dec},
+year= {2023},
+publisher = {NeurIPS MLSB},
+url       = {official link to the online version},
+selected={true},
+abstract={Abstract RNA molecules provide an exciting frontier for novel therapeutics. Accurate determination of RNA structure could accelerate development of therapeutics through an improved understanding of function. However, the extremely large conformation space has kept the RNA 3D structure space largely unresolved. Using recent advances in generative modeling, we propose DiffRNAFold, a latent space diffusion model for RNA tertiary structure design. Our preliminary results suggest that DiffRNAFold generated molecules are similar in 3D space to true RNA molecules, providing an important first step towards accurate structure and function prediction in vivo.}
+}
 
 @Article{Clarify,
 abbr={Clarify},
