added coauthor links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 @inproceedings{DiffRNAFold,
 abbr={DiffRNAFold},
-author = {Mihir, Bafna and Vikranth, Keerthipati and Subhash, Kanaparthi and Ruochi, Zhang},
+author = {Bafna, Mihir and Keerthipati, Vikranth and Kanaparthi, Subhash and Zhang, Ruochi},
 title= {DiffRNAFold: Generating RNA Tertiary Structures with Latent Space Diffusion},
 booktitle   = {NeurIPS Workshop on Machine Learning for Structural Biology},
 shorttitle={NeurIPS MLSB},
@@ -19,7 +19,7 @@ abstract={Abstract RNA molecules provide an exciting frontier for novel therapeu
 
 @Article{Clarify,
 abbr={Clarify},
-author = {Mihir, Bafna and Hechen, Li and Xiuwei, Zhang},
+author = {Bafna, Mihir and Li, Hechen and Zhang, Xiuwei},
 title= {CLARIFY: Cell-cell interaction and gene regulatory network refinement from spatially resolved transcriptomics},
 booktitle   = {31st Conference on Intelligent Systems for Molecular Biology},
 short={ISMB},
@@ -43,7 +43,7 @@ abstract={Motivation: Gene regulatory networks (GRNs) in a cell provide the tigh
 
 @inproceedings{ST-CCI,
 abbr={ST-CCI},
-author = {Mihir, Bafna and Xiuwei, Zhang},
+author = {Bafna, Mihir and Zhang, Xiuwei},
 title= {Benchmarking and Refining Cell-Cell Interactions with Spatial Transcriptomics and Deep Learning},
 booktitle   = {St. Jude National Symposium for Undergraduate Research},
 shorttitle={NSUR},
@@ -62,7 +62,7 @@ We evaluated 7 methods, including CellPhoneDB and DeepLinc, on 10 simulated data
 
 @inproceedings{DeepVifi,
 abbr={DeepVifi},
-author = {Utkrisht, Rajkumar and Sara, Javadzadeh and Mihir, Bafna and Dongxia, Wu and Rose, Yu and Jingbo, Shang and Vineet, Bafna},
+author = {Rajkumar, Utkrisht and Javadzadeh, Sara and Bafna, Mihir and Wu, Dongxia and Yu, Rose and Shang, Jingbo and Bafna, Vineet},
 title = {DeepViFi: Detecting Oncoviral Infections in Cancer Genomes Using Transformers},
 year = {2022},
 isbn = {9781450393867},
@@ -91,7 +91,7 @@ bibtex_show={true},
   bibtex_show={true},
   title={Computer-implemented methods for quantitation of features of interest in
 whole slide imaging},
-  author={Nam, Nguyen and Lorena, Mora-Blanco and Kristen, Turner and Julie, Weise and  Jason, Christiansen and Mihir, Bafna},
+  author={Nguyen, Nam and Mora-Blanco, Lorena and Turner, Kristen and Weise, Julie and  Christiansen, Jason and Bafna, Mihir},
   year={2021},
   number = {022308},
   filing={Provisional patent. PCT/US2021/022308},
